data/derived/comb/progs/unify/prog5700.ml.out
Characters 50-51:
  if n > 10 then n
                 ^
Error: This expression has type int but an expression was expected of type
         int list
